--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/maps-panel/maps-panel.component.scss
@@ -225,7 +225,7 @@ table tr:nth-child(even) td{
     }
 
 
-    select.mat-input-element {
+    select.mat-mdc-input-element {
       background-color: $colour-white;
       width: 60px;
       border: 1px solid $colour-light-grey;
@@ -352,7 +352,7 @@ table tr:nth-child(even) td{
       margin: 6px;
     }
 
-    &>select.mat-input-element { //fix for firefox flex basis issue https://github.com/philipwalton/flexbugs/issues/41
+    &>select.mat-mdc-input-element { //fix for firefox flex basis issue https://github.com/philipwalton/flexbugs/issues/41
       max-width: 150px;
     }
 
@@ -366,7 +366,7 @@ table tr:nth-child(even) td{
     font-family: $font-family-main;
   }
 
-  select.mat-input-element {
+  select.mat-mdc-input-element {
     background-color: $colour-white;
     height: 37.5px;
     top: 0;
