--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/response-details-panel/response-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/response-details-panel/response-details-panel.component.html
@@ -27,11 +27,11 @@
       <legend style="display: none">Response card</legend>
       <div class="news-form">
         <div class="field size-unset">
-          <mat-form-field appearance="standard" floatLabel="always">
+          <mat-form-field floatLabel="always">
             <mat-label class="label">Initial Attack Crews</mat-label>
             <input matInput type="number" #initialAttackCrews (change)="crewsValueChange()">
           </mat-form-field>
-          <mat-form-field appearance="standard" floatLabel="always">
+          <mat-form-field floatLabel="always">
             <mat-label class="label">Unit Crews</mat-label>
             <input matInput type="number" #unitCrews (change)="crewsValueChange()">
           </mat-form-field>
@@ -62,11 +62,11 @@
       <legend style="display: none">Arial Response Card</legend>
       <div class="news-form">
         <div class="field size-unset">
-          <mat-form-field appearance="standard" floatLabel="always">
+          <mat-form-field floatLabel="always">
             <mat-label class="label">Helicopters</mat-label>
             <input matInput type="number" #helicopters (change)="aviationValueChange()">
           </mat-form-field>
-          <mat-form-field appearance="standard" floatLabel="always">
+          <mat-form-field floatLabel="always">
             <mat-label class="label">Airtankers</mat-label>
             <input matInput type="number" #airtankers (change)="aviationValueChange()">
           </mat-form-field>
@@ -122,7 +122,7 @@
       <legend style="display: none">Equipment Response Card</legend>
       <div class="news-form">
         <div class="field size-unset">
-          <mat-form-field appearance="standard" floatLabel="always">
+          <mat-form-field floatLabel="always">
             <mat-label class="label">Heavy Equipment Pieces</mat-label>
             <input matInput type="number" #pieces (change)="heavyEquipmentValueChange()">
           </mat-form-field>
