--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/upload-video-dialog/upload-video-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/video-gallery-panel/upload-video-dialog/upload-video-dialog.component.html
@@ -1,11 +1,11 @@
 <div class="dialog-container">
     <h1 mat-dialog-title>Add Video</h1>
     <div class="dialog-content" mat-dialog-content>
-      <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
+      <mat-form-field class="item-full-width" floatLabel="always">
         <mat-label class="label">Video Title (150 character limit)</mat-label>
         <input matInput type="text" placeholder="Title" [(ngModel)]="title" [value]="title" required>
       </mat-form-field>
-      <mat-form-field class="item-full-width" appearance="standard" floatLabel="always">
+      <mat-form-field class="item-full-width" floatLabel="always">
         <mat-label class="label">Video URL</mat-label>
         <input matInput #input maxlength="150" type="text" placeholder="URL" [(ngModel)]="url" [value]="url" required>
         <mat-hint align="end">{{input.value?.length || 0}}/150</mat-hint>
