--- a/client/wfnews-war/src/main/angular/src/styles/component/_side-panel.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/component/_side-panel.scss
@@ -107,9 +107,11 @@
     box-sizing: border-box;
 
     .selected-location {
+      /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
+      /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
       div.mat-form-field-wrapper {
         padding-bottom: 0;
-
+        /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
         div.mat-form-field-underline {
           bottom: .25rem;
         }
