--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -28,23 +28,27 @@
 .columns-menu{
   display: flex;
   flex: 0 0 auto;
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
   div.mat-form-field-wrapper {
     padding-bottom: 0;
-
+    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
     div.mat-form-field-underline {
       display: none;
     }
-
+    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
     div.mat-form-field-infix {
       width: 50px;
       border-top: 0;
       padding: 0;
-
+      /*TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version.*/
       mat-select,
       input{
         width: 100%;
       }
-
+      /*TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version.*/
       .mat-select-arrow-wrapper{
         visibility: hidden;
       }
@@ -57,10 +61,10 @@
   }
 }
 
-.display-columns-selector.mat-select-panel{
+.display-columns-selector.mat-mdc-select-panel{
   max-height: unset;
 
-  .mat-option{
+  .mat-mdc-option{
     height: 22px;
     font-size: small;
     padding: 10px;
