list, menu, progress-bar, progress-spinner components upgrade

--- a/client/wfnews-war/src/main/angular/ios/App/App/public/styles.css
+++ b/client/wfnews-war/src/main/angular/ios/App/App/public/styles.css
@@ -6,7 +6,7 @@
   !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[6].rules[0].oneOf[0].use[1]!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[6].rules[0].oneOf[0].use[2]!./node_modules/resolve-url-loader/index.js??ruleSet[1].rules[6].rules[1].use[0]!./node_modules/sass-loader/dist/cjs.js??ruleSet[1].rules[6].rules[1].use[1]!./src/styles/main.scss?ngGlobalStyle ***!
   \****************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************/
 .mat-h1,
-.mat-headline,
+.mat-headline-5-5-5-5,
 .mat-typography .mat-h1,
 .mat-typography .mat-headline,
 .mat-typography h1 {
@@ -19,9 +19,9 @@
 }
 
 .mat-h2,
-.mat-title,
+.mat-headline-6,
 .mat-typography .mat-h2,
-.mat-typography .mat-title,
+.mat-typography .mat-headline-6,
 .mat-typography h2 {
   font-size: 20px;
   font-weight: 500;
@@ -32,9 +32,9 @@
 }
 
 .mat-h3,
-.mat-subheading-2,
+.mat-subtitle-1,
 .mat-typography .mat-h3,
-.mat-typography .mat-subheading-2,
+.mat-typography .mat-subtitle-1,
 .mat-typography h3 {
   font-size: 16px;
   font-weight: 400;
@@ -45,9 +45,9 @@
 }
 
 .mat-h4,
-.mat-subheading-1,
+.mat-subtitle-2,
 .mat-typography .mat-h4,
-.mat-typography .mat-subheading-1,
+.mat-typography .mat-subtitle-2,
 .mat-typography h4 {
   font-size: 15px;
   font-weight: 400;
@@ -72,9 +72,9 @@
 }
 
 .mat-body-strong,
-.mat-body-2,
+.mat-subtitle-2,
 .mat-typography .mat-body-strong,
-.mat-typography .mat-body-2 {
+.mat-typography .mat-subtitle-2 {
   font-size: 14px;
   font-weight: 500;
   line-height: 24px;
@@ -83,9 +83,9 @@
 }
 
 .mat-body,
-.mat-body-1,
+.mat-subtitle-2,
 .mat-typography .mat-body,
-.mat-typography .mat-body-1,
+.mat-typography .mat-subtitle-2,
 .mat-typography {
   font-size: 14px;
   font-weight: 400;
@@ -94,9 +94,9 @@
   letter-spacing: normal;
 }
 .mat-body p,
-.mat-body-1 p,
+.mat-subtitle-2 p,
 .mat-typography .mat-body p,
-.mat-typography .mat-body-1 p,
+.mat-typography .mat-subtitle-2 p,
 .mat-typography p {
   margin: 0 0 12px;
 }
@@ -112,8 +112,8 @@
   letter-spacing: normal;
 }
 
-.mat-display-4,
-.mat-typography .mat-display-4 {
+.mat-headline-1,
+.mat-typography .mat-headline-1 {
   font-size: 112px;
   font-weight: 300;
   line-height: 112px;
@@ -122,8 +122,8 @@
   margin: 0 0 56px;
 }
 
-.mat-display-3,
-.mat-typography .mat-display-3 {
+.mat-headline-2,
+.mat-typography .mat-headline-2 {
   font-size: 56px;
   font-weight: 400;
   line-height: 56px;
@@ -132,8 +132,8 @@
   margin: 0 0 64px;
 }
 
-.mat-display-2,
-.mat-typography .mat-display-2 {
+.mat-headline-3,
+.mat-typography .mat-headline-3 {
   font-size: 45px;
   font-weight: 400;
   line-height: 48px;
@@ -142,8 +142,8 @@
   margin: 0 0 64px;
 }
 
-.mat-display-1,
-.mat-typography .mat-display-1 {
+.mat-headline-4,
+.mat-typography .mat-headline-4 {
   font-size: 34px;
   font-weight: 400;
   line-height: 40px;
@@ -537,79 +537,86 @@ input.mat-input-element {
   font-weight: 500;
 }
 
-.mat-menu-item {
+.mat-mdc-menu-item {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 14px;
   font-weight: 400;
 }
 
-.mat-list-item {
+.mat-mdc-list-item {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 .mat-list-option {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.mat-list-base .mat-list-item {
+.mat-mdc-list-base .mat-mdc-list-item {
   font-size: 16px;
 }
-.mat-list-base .mat-list-item .mat-line {
+.mat-mdc-list-base .mat-mdc-list-item .mat-line {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   display: block;
   box-sizing: border-box;
 }
-.mat-list-base .mat-list-item .mat-line:nth-child(n+2) {
+.mat-mdc-list-base .mat-mdc-list-item .mat-line:nth-child(n+2) {
   font-size: 14px;
 }
-.mat-list-base .mat-list-option {
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+.mat-mdc-list-base .mat-list-option {
   font-size: 16px;
 }
-.mat-list-base .mat-list-option .mat-line {
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+.mat-mdc-list-base .mat-list-option .mat-line {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   display: block;
   box-sizing: border-box;
 }
-.mat-list-base .mat-list-option .mat-line:nth-child(n+2) {
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+.mat-mdc-list-base .mat-list-option .mat-line:nth-child(n+2) {
   font-size: 14px;
 }
-.mat-list-base .mat-subheader {
+.mat-mdc-list-base .mat-mdc-subheader {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 14px;
   font-weight: 500;
 }
 
-.mat-list-base[dense] .mat-list-item {
+.mat-mdc-list-base[dense] .mat-mdc-list-item {
   font-size: 12px;
 }
-.mat-list-base[dense] .mat-list-item .mat-line {
+.mat-mdc-list-base[dense] .mat-mdc-list-item .mat-line {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   display: block;
   box-sizing: border-box;
 }
-.mat-list-base[dense] .mat-list-item .mat-line:nth-child(n+2) {
+.mat-mdc-list-base[dense] .mat-mdc-list-item .mat-line:nth-child(n+2) {
   font-size: 12px;
 }
-.mat-list-base[dense] .mat-list-option {
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+.mat-mdc-list-base[dense] .mat-list-option {
   font-size: 12px;
 }
-.mat-list-base[dense] .mat-list-option .mat-line {
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+.mat-mdc-list-base[dense] .mat-list-option .mat-line {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   display: block;
   box-sizing: border-box;
 }
-.mat-list-base[dense] .mat-list-option .mat-line:nth-child(n+2) {
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+.mat-mdc-list-base[dense] .mat-list-option .mat-line:nth-child(n+2) {
   font-size: 12px;
 }
-.mat-list-base[dense] .mat-subheader {
+.mat-mdc-list-base[dense] .mat-mdc-subheader {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 12px;
   font-weight: 500;
@@ -1390,45 +1397,54 @@ textarea.cdk-textarea-autosize-measuring-firefox {
   color: rgba(0, 0, 0, 0.54);
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
 .mat-progress-bar-background {
   fill: #c5c8ca;
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
 .mat-progress-bar-buffer {
   background-color: #c5c8ca;
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
 .mat-progress-bar-fill::after {
   background-color: #263238;
 }
 
-.mat-progress-bar.mat-accent .mat-progress-bar-background {
+/*TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
+.mat-mdc-progress-bar.mat-accent .mat-progress-bar-background {
   fill: #ebebeb;
 }
-.mat-progress-bar.mat-accent .mat-progress-bar-buffer {
+/*TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
+.mat-mdc-progress-bar.mat-accent .mat-progress-bar-buffer {
   background-color: #ebebeb;
 }
-.mat-progress-bar.mat-accent .mat-progress-bar-fill::after {
+/*TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
+.mat-mdc-progress-bar.mat-accent .mat-progress-bar-fill::after {
   background-color: #bdbdbd;
 }
 
-.mat-progress-bar.mat-warn .mat-progress-bar-background {
+/*TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
+.mat-mdc-progress-bar.mat-warn .mat-progress-bar-background {
   fill: #edc6c6;
 }
-.mat-progress-bar.mat-warn .mat-progress-bar-buffer {
+/*TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
+.mat-mdc-progress-bar.mat-warn .mat-progress-bar-buffer {
   background-color: #edc6c6;
 }
-.mat-progress-bar.mat-warn .mat-progress-bar-fill::after {
+/*TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
+.mat-mdc-progress-bar.mat-warn .mat-progress-bar-fill::after {
   background-color: #c62828;
 }
 
-.mat-progress-spinner circle, .mat-spinner circle {
+.mat-mdc-progress-spinner circle, .mat-mdc-progress-spinner circle {
   stroke: #263238;
 }
-.mat-progress-spinner.mat-accent circle, .mat-spinner.mat-accent circle {
+.mat-mdc-progress-spinner.mat-accent circle, .mat-mdc-progress-spinner.mat-accent circle {
   stroke: #bdbdbd;
 }
-.mat-progress-spinner.mat-warn circle, .mat-spinner.mat-warn circle {
+.mat-mdc-progress-spinner.mat-warn circle, .mat-mdc-progress-spinner.mat-warn circle {
   stroke: #c62828;
 }
 
@@ -1943,57 +1959,61 @@ textarea.cdk-textarea-autosize-measuring-firefox {
   background-image: repeating-linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) 2px, transparent 0, transparent);
 }
 
-.mat-menu-panel {
+.mat-mdc-menu-panel {
   background: white;
 }
-.mat-menu-panel:not([class*=mat-elevation-z]) {
+.mat-mdc-menu-panel:not([class*=mat-elevation-z]) {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
-.mat-menu-item {
+.mat-mdc-menu-item {
   background: transparent;
   color: rgba(0, 0, 0, 0.87);
 }
-.mat-menu-item[disabled],
+.mat-mdc-menu-item[disabled],
 .mat-menu-item[disabled] .mat-menu-submenu-icon,
 .mat-menu-item[disabled] .mat-icon-no-color {
   color: rgba(0, 0, 0, 0.38);
 }
 
-.mat-menu-item .mat-icon-no-color,
+/*TODO(mdc-migration): The following rule targets internal classes of menu that may no longer apply for the MDC version.*/
+.mat-mdc-menu-item .mat-icon-no-color,
 .mat-menu-submenu-icon {
   color: rgba(0, 0, 0, 0.54);
 }
 
-.mat-menu-item:hover:not([disabled]),
+.mat-mdc-menu-item:hover:not([disabled]),
 .mat-menu-item.cdk-program-focused:not([disabled]),
 .mat-menu-item.cdk-keyboard-focused:not([disabled]),
 .mat-menu-item-highlighted:not([disabled]) {
   background: rgba(0, 0, 0, 0.04);
 }
 
-.mat-list-base .mat-list-item {
+.mat-mdc-list-base .mat-mdc-list-item {
   color: rgba(0, 0, 0, 0.87);
 }
-.mat-list-base .mat-list-option {
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+.mat-mdc-list-base .mat-list-option {
   color: rgba(0, 0, 0, 0.87);
 }
-.mat-list-base .mat-subheader {
+.mat-mdc-list-base .mat-mdc-subheader {
   color: rgba(0, 0, 0, 0.54);
 }
-.mat-list-base .mat-list-item-disabled {
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
+.mat-mdc-list-base .mat-list-item-disabled {
   background-color: #eeeeee;
   color: rgba(0, 0, 0, 0.38);
 }
 
 .mat-list-option:hover, .mat-list-option:focus,
-.mat-nav-list .mat-list-item:hover,
+.mat-nav-list .mat-mdc-list-item:hover,
 .mat-nav-list .mat-list-item:focus,
 .mat-action-list .mat-list-item:hover,
 .mat-action-list .mat-list-item:focus {
   background: rgba(0, 0, 0, 0.04);
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 .mat-list-single-selected-option, .mat-list-single-selected-option:hover, .mat-list-single-selected-option:focus {
   background: rgba(0, 0, 0, 0.12);
 }
@@ -3104,7 +3124,7 @@ mat-toolbar.wf1-application-header.mat-primary .app-logo-and-title-div {
   justify-content: center;
   align-items: flex-end;
 }
-mat-toolbar.wf1-application-header.mat-primary .app-logo-and-title-div .mat-title {
+mat-toolbar.wf1-application-header.mat-primary .app-logo-and-title-div .mat-headline-6 {
   font-size: 1.4rem;
   color: #ffffff;
   white-space: nowrap;
@@ -3409,11 +3429,11 @@ mat-toolbar.wf1-application-toolbar .wf1-toolbar-spacer {
   fill: #a7a9ac;
 }
 
-wf1-list-container mat-list.mat-list {
+wf1-list-container mat-list.mat-mdc-list {
   padding-top: 0;
   height: 100%;
 }
-wf1-list-container mat-list.mat-list cdk-virtual-scroll-viewport {
+wf1-list-container mat-list.mat-mdc-list cdk-virtual-scroll-viewport {
   height: 100%;
 }
 
@@ -3424,6 +3444,7 @@ wf1-list-container wf1-spinner {
   align-items: center;
 }
 
+/*TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version.*/
 mat-list-item.list-item .mat-list-item-content {
   align-items: center;
   padding: 0 !important;
@@ -6138,5 +6159,3 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item:not(.lg-zoomable).lg-co
   right: 0;
   left: 0;
 }
-
-/*# sourceMappingURL=styles.css.map*/
