--- a/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/common/base-collection/collection.component.scss
@@ -247,15 +247,16 @@
         flex-basis: auto;
       }
 
-      ::ng-deep .mat-radio-group{
+      ::ng-deep .mat-mdc-radio-group{
         display: flex;
-        .mat-radio-button{
+        .mat-mdc-radio-button{
           height: 35px;
           display: flex;
 
           &:not(:first-of-type) {
             margin-left: 5px;
           }
+          /*TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version.*/
           .mat-radio-outer-circle {
             background-color: $colour-white;
           }
