--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
@@ -1,12 +1,12 @@
 <div>
-  <div>{{ title }}</div>
-  <img alt="Report of Fire Banner" [src]="imageUrl" height="248px" />
-  <div>{{ message }}</div>
-  <div *ngIf="!closeButton">
-    <button mat-flat-button (click)="openCallPage()">Call</button>
-	  <button mat-flat-button color="primary" (click)="next()">Start</button>
+  <div class="rof-text-title">{{ title }}</div>
+  <img alt="Report of Fire Banner" [src]="imageUrl" height="248px" class="rof-image"/>
+  <div class="rof-text-secondary-header">{{ message }}</div>
+  <div *ngIf="!closeButton" class="rof-button-container">
+    <button mat-flat-button class="rof-button" (click)="openCallPage()">Call</button>
+	  <button mat-flat-button class="rof-button-primary" (click)="next()">Start</button>
   </div>
-  <div *ngIf="closeButton">
-    <button mat-flat-button (click)="close()">Close</button>
+  <div *ngIf="closeButton" class="rof-button-container">
+    <button mat-flat-button class="rof-button-primary" (click)="close()">Close</button>
   </div>
 </div>
