--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.scss
@@ -1,3 +1,7 @@
-:host {
-  font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
+@import '../report-of-fire.component.scss';
+
+.text-container {
+  margin: 20px;
+  width: calc(100vw - 40px);
+  height: calc(100vh - 400px);
 }
