--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
@@ -1,12 +1,18 @@
 <div>
-  {{ title }}
-  {{ message }}
+  <div class="rof-text-primary-header">{{ title }}</div>
+  <div class="rof-text-secondary-header">{{ message }}</div>
 
-  <input matInput type="text" [(ngModel)]="reportOfFire.fullName">
-  <input matInput type="text" [(ngModel)]="reportOfFire.phoneNumber">
+  <mat-form-field appearance="outline" class="input-style">
+    <mat-label>Name</mat-label>
+    <input matInput type="text" [(ngModel)]="reportOfFire.fullName">
+  </mat-form-field>
+  <mat-form-field appearance="outline" class="input-style">
+    <mat-label>Phone Number</mat-label>
+    <input matInput mask="(000) 000-0000" [(ngModel)]="reportOfFire.phoneNumber">
+  </mat-form-field>
 
-  <div>
-    <button mat-flat-button (click)="reportOfFire.consentToCall = false; previous();">Previous</button>
-	  <button mat-flat-button color="primary" (click)="reportOfFire.consentToCall = true; next();">Continue</button>
+  <div class="rof-button-container">
+    <button class="rof-button" mat-flat-button (click)="reportOfFire.consentToCall = false; previous();">Previous</button>
+	  <button class="rof-button-primary" mat-flat-button (click)="reportOfFire.consentToCall = true; next();">Continue</button>
   </div>
 </div>
