--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
@@ -26,32 +26,200 @@
 }
 
 .wrapper {
-  max-width: 450px;
+  position: fixed;
+  bottom: 0px;
+  margin: 0px 0px 0px 20px;
+  width: calc(100% - 20px);
 }
 
 .ProgressBar {
   margin: 0 auto;
-  padding: 2em 0 3em;
+  padding: 0em 0 1em;
   list-style: none;
-  position: relative;
   display: flex;
   justify-content: space-between;
 }
 
 .ProgressBar-step {
-  text-align: center;
-  position: relative;
   width: 100%;
-
   .ProgressBar-icon {
-    width: 0.25em;
-    height: 0.25em;
+    width: 1px;
+    height: 1px;
     background-color: #737373;
     border-radius: 50%;
-    padding: 0.5em;
+    padding: 12px;
     max-width: 100%;
     z-index: 10;
     position: relative;
     transition: all .25s ease-out;
   }
+}
+
+.rof-image {
+  text-align: center;
+  width: 100%;
+}
+
+.rof-button-container {
+  display: flex;
+  height: 43px;
+  padding: 8px 32px 8px 24px;
+  align-items: center;
+  gap: calc(100vw - 320px);
+  bottom: 60px;
+  position: fixed;
+  .rof-button {
+    width: 138px;
+    height: 43px;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    background-color: #f5f5f5;
+    border: solid 1px #bfbfbf;
+    &-primary {
+      width: 138px;
+      height: 43px;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      color: white;
+      background-color: #123262;
+    }
+    &-disabled {
+      width: 138px;
+      height: 43px;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      background-color: gray;
+    }
+  }
+}
+
+.rof-complex-group {
+  flex-flow: wrap;
+  display: flex;
+  overflow-y: auto;
+  height: calc(100vh - 310px);
+  max-height: 509px;
+  gap: 20px;
+  .flex-button {
+    width: calc(50vw - 30px);
+    height: 81px;
+    margin-bottom: 0px !important;
+  }
+  .mat-flat-button {
+    border: none;
+    border-radius: 8px;
+    background: #f1f1f1;
+    height: 81px;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    outline: none;
+    width: calc(100vw - 40px);
+    cursor: pointer;
+    color: #000 !important;
+    text-align: center !important;
+    font-size: 19px !important;
+    font-style: normal !important;
+    font-weight: 600 !important;
+    line-height: normal !important;
+    letter-spacing: -0.38px !important;
+  }
+}
+
+.left-padding {
+  padding-left: 10px;
+}
+
+.rof-toggle-group {
+  width: calc(100% - 40px);
+  margin: 20px;
+  border: none;
+  .mat-icon {
+    color: #548ADB;
+    margin-right: 8px;
+  }
+  .mat-button-toggle{
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 8px;
+    height: 81px;
+  }
+  .mat-button-toggle-appearance-standard {
+    color: rgba(0, 0, 0, 0.87);
+    background-color: #f1f1f1;
+  }
+  .mat-button-toggle-checked {
+    background-color: #e0e0e0 !important;
+  }
+  .mat-button-toggle-button {
+    border-radius: 8px;
+  }
+}
+
+::ng-deep.mat-button-toggle-label-content {
+  color: #000;
+  text-align: center;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.38px;
+  margin-top: 16px;
+}
+
+.rof-text {
+  color: #000000;
+  &-title {
+    text-align: center;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.64px;
+    margin: 32px;
+  }
+  &-primary-header {
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.56px;
+    margin: 20px;
+  }
+  &-secondary-header {
+    color: #484644;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.32px;
+    margin: 20px;
+  }
+  &-body {
+    font-size: 17px;
+    color: #242424;
+    margin: 20px;
+    .selected {
+      font-weight: 500;
+    }
+  }
+  &-subheader {
+    font-size: 16px;
+    color: #484644;
+    margin: 20px;
+  }
+  &-subheader-black {
+    font-size: 16px;
+    margin: 20px;
+  }
+}
+
+.panel-wrapper {
+  height: calc(100vh - 125px);
 }
