--- a/client/wfnews-war/src/main/angular/src/styles/main.scss
+++ b/client/wfnews-war/src/main/angular/src/styles/main.scss
@@ -417,8 +417,8 @@
       .summary-card{
         margin: var(--wf1-gutter-space) 0 0 0;
       }
-
-      mat-card.mat-card.wf1-vendor-portal-header-bar {
+      /*TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
+      mat-card.mat-mdc-card.wf1-vendor-portal-header-bar {
         padding: 0;
       }
 
