checkbox component upgrade (#905)
Co-authored-by: Dylan <dylan.hemsworth@gmail.com>

--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
@@ -118,7 +118,7 @@ table tr:nth-child(even) td{
     .checkbox-group {
         display: flex;
 
-        .mat-checkbox {
+        .mat-mdc-checkbox {
             border: none;
         }
     }
